deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jync
  labels:
    app.kubernetes.io/name: jync
